src/test/resources/purescript_examples/passing/Nested.purs.psi
FILE
  PureASTWrapperElement(Program)
    PureASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PureASTWrapperElement(ModuleName)
        PureASTWrapperElement(Qualified)
          PsiElement(proper name)('Main')
          PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n  ')
      PureASTWrapperElement(DataDeclaration)
        PsiElement(data)('data')
        PsiElement(whitespace)(' ')
        PsiElement(proper name)('Extend')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(TypeArgs)
          PsiElement(identifier)('r')
          PsiElement(whitespace)(' ')
          PsiElement(identifier)('a')
          PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PsiElement(proper name)('Extend')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(TypeAtom)
          PureASTWrapperElement(ObjectType)
            PsiElement({)('{')
            PsiElement(whitespace)(' ')
            PureASTWrapperElement(Row)
              PsiElement(identifier)('prev')
              PsiElement(whitespace)(' ')
              PsiElement(::)('::')
              PsiElement(whitespace)(' ')
              PureASTWrapperElement(Type)
                PureASTWrapperElement(TypeAtom)
                  PureASTWrapperElement(TypeVar)
                    PsiElement(identifier)('r')
                    PsiElement(whitespace)(' ')
                PureASTWrapperElement(TypeAtom)
                  PureASTWrapperElement(TypeVar)
                    PsiElement(identifier)('a')
              PsiElement(,)(',')
              PsiElement(whitespace)(' ')
              PsiElement(identifier)('next')
              PsiElement(whitespace)(' ')
              PsiElement(::)('::')
              PsiElement(whitespace)(' ')
              PureASTWrapperElement(Type)
                PureASTWrapperElement(TypeAtom)
                  PureASTWrapperElement(TypeVar)
                    PsiElement(identifier)('a')
                    PsiElement(whitespace)(' ')
            PsiElement(})('}')
            PsiElement(whitespace)('\n\n  ')
      PureASTWrapperElement(DataDeclaration)
        PsiElement(data)('data')
        PsiElement(whitespace)(' ')
        PsiElement(proper name)('Matrix')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(TypeArgs)
          PsiElement(identifier)('r')
          PsiElement(whitespace)(' ')
          PsiElement(identifier)('a')
          PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PsiElement(proper name)('Square')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(TypeAtom)
          PsiElement(()('(')
          PureASTWrapperElement(Type)
            PureASTWrapperElement(TypeAtom)
              PureASTWrapperElement(TypeVar)
                PsiElement(identifier)('r')
                PsiElement(whitespace)(' ')
            PureASTWrapperElement(TypeAtom)
              PsiElement(()('(')
              PureASTWrapperElement(Type)
                PureASTWrapperElement(TypeAtom)
                  PureASTWrapperElement(TypeVar)
                    PsiElement(identifier)('r')
                    PsiElement(whitespace)(' ')
                PureASTWrapperElement(TypeAtom)
                  PureASTWrapperElement(TypeVar)
                    PsiElement(identifier)('a')
              PsiElement())(')')
          PsiElement())(')')
          PsiElement(whitespace)(' ')
        PsiElement(operator)('|')
        PsiElement(whitespace)(' ')
        PsiElement(proper name)('Bigger')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(TypeAtom)
          PsiElement(()('(')
          PureASTWrapperElement(Type)
            PureASTWrapperElement(TypeAtom)
              PureASTWrapperElement(TypeConstructor)
                PureASTWrapperElement(Qualified)
                  PsiElement(proper name)('Matrix')
                  PsiElement(whitespace)(' ')
            PureASTWrapperElement(TypeAtom)
              PsiElement(()('(')
              PureASTWrapperElement(Type)
                PureASTWrapperElement(TypeAtom)
                  PureASTWrapperElement(TypeConstructor)
                    PureASTWrapperElement(Qualified)
                      PsiElement(proper name)('Extend')
                      PsiElement(whitespace)(' ')
                PureASTWrapperElement(TypeAtom)
                  PureASTWrapperElement(TypeVar)
                    PsiElement(identifier)('r')
              PsiElement())(')')
              PsiElement(whitespace)(' ')
            PureASTWrapperElement(TypeAtom)
              PureASTWrapperElement(TypeVar)
                PsiElement(identifier)('a')
          PsiElement())(')')
          PsiElement(whitespace)('\n\n  ')
      PureASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('main')
        PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Value)
          PureASTWrapperElement(PrefixValue)
            PureASTWrapperElement(Var)
              PureASTWrapperElement(Qualified)
                PureASTWrapperElement(ModuleName)
                  PsiElement(proper name)('Debug')
                  PsiElement(.)('.')
                PureASTWrapperElement(ModuleName)
                  PsiElement(proper name)('Trace')
                  PsiElement(.)('.')
                PsiElement(identifier)('trace')
                PsiElement(whitespace)(' ')
            PureASTWrapperElement(StringLiteral)
              PsiElement(string)('"Done"')
              PsiElement(whitespace)('\n')
