src/test/resources/purescript_examples/failing/NewtypeMultiCtor.purs.psi
FILE
  PureASTWrapperElement(Program)
    PureASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PureASTWrapperElement(Qualified)
        PureASTWrapperElement(ModuleName)
          PsiElement(proper name)('Main')
      PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(NewtypeDeclaration)
        PsiElement(newtype)('newtype')
        PsiElement(whitespace)(' ')
        PsiElement(proper name)('Thing')
        PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PsiElement(proper name)('Thing')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(TypeAtom)
          PureASTWrapperElement(TypeConstructor)
            PureASTWrapperElement(Qualified)
              PsiElement(proper name)('String')
              PsiElement(whitespace)(' ')
  PsiErrorElement:Unexpected |. Expecting Module
    PsiElement(|)('|')
    PsiElement(whitespace)(' ')
    PsiElement(proper name)('Other')
